[475561] Support the "System Explorer" and "Command Prompt" commands on Mac and Linux, too
https://bugs.eclipse.org/bugs/show_bug.cgi?id=475561